# guile-wm

./: .gitignore  AUTHORS  LICENSE  Makefile.am  Makefile.in  NEWS  README  README-in.org  README.md  aclocal.m4  configure  configure.ac  guile-wm  guile-wm.texi  wm-init-sample.scm
module/: Makefile.am  Makefile.in
module/guile-wm/: color.scm  command.scm  draw.scm  focus.scm  icccm.scm  keymap.scm  keystroke.scm  keysyms.scm  log.scm  redirect.scm  reparent.scm  shared.scm  text-edit.scm  text.scm  user.scm
module/guile-wm/module/: cursor.scm  fullscreen.scm  help.scm  magnetic.scm  menu.scm  message.scm  minibuffer.scm  randr.scm  repl.scm  root-keymap.scm  simple-focus.scm  simple-reparent.scm  tiling.scm  time.scm  tinywm.scm  window-cycle.scm  window-menu.scm
module/language/command/: spec.scm
