## Process this file with automake to produce Makefile.in.
##
##  	Copyright (C) 2013 Mark Witmer
##
##   This file is part of guile-wm.
##
##   guile-wm is free software; you can redistribute it and/or modify
##   it under the terms of the GNU Lesser General Public License as
##   published by the Free Software Foundation; either version 3, or
##   (at your option) any later version.
##
##   guile-wm is distributed in the hope that it will be useful, but
##   WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU Lesser General Public License for more details.
##
##   You should have received a copy of the GNU Lesser General Public
##   License along with guile-wm; see the file COPYING.LESSER.  If
##   not, write to the Free Software Foundation, Inc., 51 Franklin
##   Street, Fifth Floor, Boston, MA 02110-1301 USA

wmdir = $(GUILE_SITE)
nobase_dist_wm_DATA =                     \
guile-wm/color.scm                        \
guile-wm/focus.scm                        \
guile-wm/keystroke.scm                    \
guile-wm/reparent.scm                     \
guile-wm/text.scm                         \
guile-wm/text-edit.scm                    \
guile-wm/command.scm                      \
guile-wm/icccm.scm                        \
guile-wm/keysyms.scm                      \
guile-wm/shared.scm                       \
guile-wm/user.scm                         \
guile-wm/draw.scm                         \
guile-wm/keymap.scm                       \
guile-wm/log.scm                          \
guile-wm/redirect.scm                     \
guile-wm/module/cursor.scm                \
guile-wm/module/message.scm               \
guile-wm/module/repl.scm                  \
guile-wm/module/simple-reparent.scm       \
guile-wm/module/window-cycle.scm          \
guile-wm/module/fullscreen.scm            \
guile-wm/module/minibuffer.scm            \
guile-wm/module/root-keymap.scm           \
guile-wm/module/time.scm                  \
guile-wm/module/window-menu.scm           \
guile-wm/module/menu.scm                  \
guile-wm/module/randr.scm                 \
guile-wm/module/simple-focus.scm          \
guile-wm/module/tinywm.scm                \
language/command/spec.scm
